<resources>
    <string name="app_name">Parking Report</string>
    <string name="not_user">Not a user? Sign up!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">New feature will be releasing!</string>
    <string name="log_out">Log Out</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="send_code">Send Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="please_select_you_icon">Please select you icon</string>
    <string name="login">Login</string>
    <string name="password_for_main">Password</string>
    <string name="admin_for_main">admin</string>
    <string name="username_for_main">Username</string>
    <string name="admin_for_main_1">admin</string>
    <string name="logo_picture">logo_picture</string>
    <string name="sign_up">Don\'t have an account? Sign up</string>
    <string name="admin_for_main_2">Admin</string>
    <string name="user_for_main">User</string>
    <string name="car_plate_for_report">Car Plate:</string>
    <string name="location_for_report">Location:</string>
    <string name="time_for_report">Time:</string>
    <string name="reporter_name_for_report">Reporter Name:</string>
    <string name="report_id_for_report">Report ID:</string>
    <string name="status_for_report">Status:</string>
    <string name="feedback_for_report">Feedback:</string>
    <string name="info_summary_for_report">Info Summary</string>
    <string name="report_violation_report_page">Report Violation</string>
    <string name="select_file_report_page">select file</string>
    <string name="subbmit_form_you_phone">subbmit form you phone</string>
    <string name="take_photo_report_page">take photo</string>
    <string name="location">[Auto GPS address]</string>
    <string name="date_dd_mm_yyyy">Date: dd/mm/yyyy</string>
    <string name="text_car_plate_number">Text: Car Plate Number</string>
    <string name="text_confirm_car_plate_number">Text: Confirm Car Plate Number</string>
    <string name="i_confirm_the_information_is_true_and_accurate">I confirm the information is true and accurate.</string>
    <string name="submit">Submit</string>
    <string name="report_review">Report Review</string>
    <string name="info_summary">Info Summary</string>
    <string name="car_plate">Car Plate:</string>
    <string name="location_for_unreview">Location:</string>
    <string name="time">Time:</string>
    <string name="reporter_name">Reporter Name:</string>
    <string name="report_id">Report ID:</string>
    <string name="status">Status:</string>
    <string name="feedback">Feedback:</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="leave_message_this_is_a_text_field">Leave Message: This is a text field</string>
    <string name="submitbutton">Submit</string>
    <string name="enter_your_question">Enter your question...</string>
    <string name="change_password">Change Password</string>
    <string name="log_out_home">Log Out</string>
    <string name="icon">Icon</string>
    <string name="search_for_report">Search...</string>
    <string name="search">Search</string>
    <string name="view_details">View Details</string>
    <string name="send">Send</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="report">Report</string>
    <string name="ai_generated_content_is_for_reference_only_please_verify_with_official_sources">⚠️ AI-generated content is for reference only. Please verify with official sources.</string>
    <string name="user_info">User Info</string>
    <string name="user_joe">User Joe</string>
    <string name="my">My</string>
    <string name="all_report">All Report</string>
    <string name="unreview">Unreview</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="myreport">MyReport</string>
    <string name="chat">Chat</string>

</resources>